--- a/test/fixtures/payroll_categories.yml
+++ b/test/fixtures/payroll_categories.yml
@@ -2,4 +2,6 @@ fixture:
     id: 1
     prtype: 1
     code: 1
-    title: "Category 1"
+    title: "기타"
+    created_at: <%= Time.zone.now %>
+    updated_at: <%= Time.zone.now %>
