--- a/test/fixtures/taxmen.yml
+++ b/test/fixtures/taxmen.yml
@@ -1,8 +1,8 @@
 fixture:
     id: 1
     business_client_id: 1
-    fullname: 왕 수용
-    email: wangsy@wangsy.com
+    fullname: 김 관리
+    email: test@test.com
     phonenumber: 010-123-1234
     created_at: <%= Time.zone.now %>
     updated_at: <%= Time.zone.now %>
