--- a/test/fixtures/bankbooks.yml
+++ b/test/fixtures/bankbooks.yml
@@ -7,6 +7,7 @@ shinhan:
   updated_at: <%= Time.zone.now %>
   holder_type: BusinessClient
   holder_id: 1
+  bankname: 신한 은행
   
 ibk:
   id: 2
@@ -17,6 +18,7 @@ ibk:
   updated_at: <%= Time.zone.now %>
   holder_type: PaymentRecord
   holder_id: 1
+  bankname: 기업 은행
 
 hsbc:
   id: 3
@@ -27,6 +29,7 @@ hsbc:
   updated_at: <%= Time.zone.now %>
   holder_type: Dayworker
   holder_id: 1
+  bankname: HSBC 은행
 
 nonghyup:
   id: 4
@@ -35,3 +38,4 @@ nonghyup:
   account_holder: 김 기업
   created_at: <%= Time.zone.now %>
   updated_at: <%= Time.zone.now %>
+  bankname: 농협 은행
