--- a/test/fixtures/people_permissions.yml
+++ b/test/fixtures/people_permissions.yml
@@ -42,18 +42,6 @@ bank_transfers:
   permission_id: 7
   person_id: 1
 
-#projects:
-#  permission_id: 8
-#  person_id: 1
-
-#projects_normal:
-#  permission_id: 8
-#  person_id: 2
-
-#projects_project_admin:
-#  permission_id: 8
-#  person_id: 3
-
 business_clients:
   permission_id: 9
   person_id: 1
@@ -61,6 +49,10 @@ business_clients:
 taxbills:
   permission_id: 10
   person_id: 1
+
+taxbills_normal:
+  permission_id: 10
+  person_id: 2
 
 postings:
   permission_id: 11
