--- a/test/fixtures/taxmen.yml
+++ b/test/fixtures/taxmen.yml
@@ -7,3 +7,13 @@ fixture:
     created_at: <%= Time.zone.now %>
     updated_at: <%= Time.zone.now %>
     person_id: 1
+
+normal_taxman:
+    id: 2
+    business_client_id: 2
+    fullname: 김 개똥
+    email: normal@test.com
+    phonenumber: 010-123-1234
+    created_at: <%= Time.zone.now %>
+    updated_at: <%= Time.zone.now %>
+    person_id: 2
