--- a/test/fixtures/project_assign_infos.yml
+++ b/test/fixtures/project_assign_infos.yml
@@ -1,6 +1,7 @@
 admin_regist_project:
   id: 1
-  employee_id: 1
+  participant_type: "Employee"
+  participant_id: 1
   project_id: 1
   created_at: <%= Time.zone.now %>
   updated_at: <%= Time.zone.now %>
@@ -8,7 +9,8 @@ admin_regist_project:
 
 cardbill_manager_registe_project:
   id: 2
-  employee_id: 3
+  participant_type: "Employee"
+  participant_id: 3
   project_id: 1
   created_at: <%= Time.zone.now %>
   updated_at: <%= Time.zone.now %>
@@ -16,7 +18,8 @@ cardbill_manager_registe_project:
 
 card_used_user_registe_project:
   id: 3
-  employee_id: 4
+  participant_type: "Employee"
+  participant_id: 4
   project_id: 1
   created_at: <%= Time.zone.now %>
   updated_at: <%= Time.zone.now %>
@@ -24,7 +27,8 @@ card_used_user_registe_project:
 
 normal_user_registe_project:
   id: 4
-  employee_id: 2
+  participant_type: "Employee"
+  participant_id: 2
   project_id: 1
   created_at: <%= Time.zone.now %>
   updated_at: <%= Time.zone.now %>
@@ -32,7 +36,8 @@ normal_user_registe_project:
 
 admin_regist_end_project:
   id: 5
-  employee_id: 1
+  participant_type: "Employee"
+  participant_id: 1
   project_id: 3
   created_at: <%= Time.zone.now %>
   updated_at: <%= Time.zone.now %>
@@ -40,7 +45,8 @@ admin_regist_end_project:
 
 cardbill_manager_registe_end_project:
   id: 6
-  employee_id: 3
+  participant_type: "Employee"
+  participant_id: 3
   project_id: 3
   created_at: <%= Time.zone.now %>
   updated_at: <%= Time.zone.now %>
@@ -48,7 +54,8 @@ cardbill_manager_registe_end_project:
 
 card_used_user_registe_end_project:
   id: 7
-  employee_id: 4
+  participant_type: "Employee"
+  participant_id: 4
   project_id: 3
   created_at: <%= Time.zone.now %>
   updated_at: <%= Time.zone.now %>
@@ -56,7 +63,8 @@ card_used_user_registe_end_project:
 
 normal_user_registe_end_project:
   id: 8
-  employee_id: 2
+  participant_type: "Employee"
+  participant_id: 2
   project_id: 3
   created_at: <%= Time.zone.now %>
   updated_at: <%= Time.zone.now %>
