--- a/test/fixtures/business_clients.yml
+++ b/test/fixtures/business_clients.yml
@@ -1,6 +1,6 @@
 fixture:
     id: 1
-    name: 테스트 거래처1
+    name: 테스트 거래처
     registration_number: 123-321-1234
     category: 테스트
     business_status: 테스트 모듈
