--- a/test/fixtures/commutes.yml
+++ b/test/fixtures/commutes.yml
@@ -1,5 +1,5 @@
 fixture:
     id: 1
-    go: 2012-07-18 09:02:13.117074
-    leave: 2012-07-18 18:08:13.117074
+    go: <%= Time.zone.now %>
+    leave: <%= Time.zone.now %>
     employee_id: 1
