--- a/test/fixtures/employees.yml
+++ b/test/fixtures/employees.yml
@@ -62,3 +62,16 @@ retired_user:
   juminno: 123456-3214234
   listed: f
   employment_proof_hash: 
+
+another_company_employee:
+  id: 6
+  picture_id: 
+  created_at: 2012-07-18 16:17:56.775700
+  updated_at: 2012-07-20 13:36:03.201237
+  joined_on: 2012-07-18
+  retired_on: 2012-07-20
+  person_id: 12
+  companyno: 1
+  juminno: 123456-3214234
+  listed: f
+  employment_proof_hash: 
