--- a/test/fixtures/accounts.yml
+++ b/test/fixtures/accounts.yml
@@ -78,3 +78,10 @@ retired_user:
     person_id: 10
     hashed_password: "96043f0adf13e8d440a0e90ec7a2b7757a16bc2c"
     salt: "21757029800.1164294613723833"
+
+retired_user:
+    id: 11
+    name: "another_admin"
+    person_id: 12
+    hashed_password: "96043f0adf13e8d440a0e90ec7a2b7757a16bc2c"
+    salt: "21757029800.1164294613723833"
