--- a/test/fixtures/business_clients.yml
+++ b/test/fixtures/business_clients.yml
@@ -23,3 +23,16 @@ normal_business_client:
     updated_at: <%= Time.zone.now %>
     attachment_id:
     company_id: 1
+
+another_company_business_client:
+    id: 3
+    name: 다른 회사 거래처
+    registration_number: 123-321-1234
+    category: 테스트
+    business_status: 테스트 모듈
+    address: MAC OS
+    owner: MINT
+    created_at: <%= Time.zone.now %>
+    updated_at: <%= Time.zone.now %>
+    attachment_id:
+    company_id: 2
