--- a/test/fixtures/companies.yml
+++ b/test/fixtures/companies.yml
@@ -18,3 +18,24 @@ fixture:
   default_password: 1234
   apply_admin_id: 1
   enrollment_items: 이력서
+
+another_company:
+  id: 2
+  name: LG
+  created_at: 2012-07-18 16:07:56.123710
+  updated_at: 2012-07-18 16:07:56.123710
+  pay_basic_date: 20
+  payday: 25
+  registration_number: 123-12-1234568
+  owner_name: 다른 사장
+  address: 가람동
+  phone_number: 02-123-1234
+  google_apps_domain: test.com
+  google_apps_accountname: test
+  google_apps_password: 1234
+  redmine_domain: redmine.test.kr
+  redmine_accountname: test
+  redmine_password: 1234
+  default_password: 1234
+  apply_admin_id: 12
+  enrollment_items: 이력서
