--- a/test/fixtures/contact_other_tags.yml
+++ b/test/fixtures/contact_other_tags.yml
@@ -4,3 +4,10 @@ fixture:
   created_at: 2012-07-18 16:08:13.117074
   updated_at: 2012-07-18 16:08:13.117074
   company_id: 1
+
+another_company_tag:
+  id: 2
+  name: 다른 회사 태그
+  created_at: 2012-07-18 16:08:13.117074
+  updated_at: 2012-07-18 16:08:13.117074
+  company_id: 2
