--- a/test/fixtures/projects.yml
+++ b/test/fixtures/projects.yml
@@ -30,3 +30,14 @@ ended_project:
   created_at: <%= Time.zone.now %>
   updated_at: <%= Time.zone.now %>
   company_id: 1
+
+another_company_project:
+  id: 4
+  name: "다른 회사 프로젝트"
+  started_on: 2012-07-20
+  ending_on: 2012-07-20
+  ended_on: 2012-07-28
+  revenue: 1000000
+  created_at: <%= Time.zone.now %>
+  updated_at: <%= Time.zone.now %>
+  company_id: 2
