--- a/test/fixtures/required_tags.yml
+++ b/test/fixtures/required_tags.yml
@@ -4,3 +4,10 @@ fixture:
   tag_id: 1
   created_at: 2012-07-23 09:18:35.660764
   updated_at: 2012-07-23 09:18:35.660764
+
+another_company_tag:
+  id: 2
+  modelname: Employee
+  tag_id: 2
+  created_at: 2012-07-23 09:18:35.660764
+  updated_at: 2012-07-23 09:18:35.660764
