--- a/test/fixtures/groups.yml
+++ b/test/fixtures/groups.yml
@@ -3,7 +3,7 @@ admin:
   name: "admin"
   created_at: 2012-07-18 16:08:13.062284
   updated_at: 2012-07-18 16:08:13.062284
-  parent_id: 1
+  parent_id:
 
 no_admin:
   id: 2
