--- a/test/fixtures/card_histories.yml
+++ b/test/fixtures/card_histories.yml
@@ -5,3 +5,14 @@ exist_cardbill:
     amount: 12000
     paid_at: <%= Date.today %>
     transacted_at: <%= DateTime.now %>
+    approved_number: 111
+    approved_status: OK
+
+unexist_cardbill:
+    id: 2
+    creditcard_id: 1
+    amount: 10000
+    paid_at: <%= Date.today %>
+    transacted_at: <%= DateTime.now %>
+    approved_number: 123
+    approved_status: OK
