--- a/test/fixtures/bankbooks.yml
+++ b/test/fixtures/bankbooks.yml
@@ -8,6 +8,7 @@ shinhan:
   holder_type: BusinessClient
   holder_id: 1
   bankname: 신한 은행
+  bank_code: 88
   
 ibk:
   id: 2
@@ -19,6 +20,7 @@ ibk:
   holder_type: PaymentRecord
   holder_id: 1
   bankname: 기업 은행
+  bank_code: 3
 
 hsbc:
   id: 3
@@ -30,6 +32,7 @@ hsbc:
   holder_type: Dayworker
   holder_id: 1
   bankname: HSBC 은행
+  bank_code: 54
 
 nonghyup:
   id: 4
@@ -39,3 +42,4 @@ nonghyup:
   created_at: <%= Time.zone.now %>
   updated_at: <%= Time.zone.now %>
   bankname: 농협 은행
+  bank_code: 11
