fix failed test

--- a/test/fixtures/payment_requests.yml
+++ b/test/fixtures/payment_requests.yml
@@ -6,6 +6,7 @@ fixture:
   amount: 11000
   created_at: <%= Time.zone.now %>
   updated_at: <%= Time.zone.now %>
-  complete:
+  complete: false
+  # complete:
   basis_type:
   basis_id:
